--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       </p>
     </header>
 
-    <form id="login-form">
-      <input type="text" placeholder="Email or phone number" />
-      <input type="password" placeholder="Password" />
+    <form action="friends.html" method="get" id="login-form">
+      <input name="username" type="text" placeholder="Email or phone number" />
+      <input name="password" type="password" placeholder="Password" />
       <input type="submit" value="Log In" />
-      <input type="submit" value="Sign Up" />
+      <!-- <input type="submit" value="Sign Up" /> -->
       <a href="#">Find KoKoa Account or Password</a>
     </form>
   </body>
