--- a/friends.html
+++ b/friends.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Frineds - KokoaTalk</title>
   </head>
+
   <body>
-    hello this is friends
+    <div class="status-bar">
+      <div class="status-bar__column">
+        <span>No Service</span>
+        <i class="fas fa-wifi"></i>
+      </div>
+      <div class="status-bar__column">
+        <span>18:43</span>
+      </div>
+      <div class="status-bar__column">
+        <span>90%</span>
+        <i class="fas fa-battery-full fa-lg"></i>
+        <i class="fas fa-bolt"></i>
+      </div>
+    </div>
+
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__btn">
+          <a class="nav__link" href="friends.html"
+            ><i class="far fa-user fa-lg"></i
+          ></a>
+        </li>
+        <li>
+          <a class="nav__link" href="#"><i class="far fa-comment fa-lg"></i></a>
+        </li>
+        <li>
+          <a class="nav__link" href="#"><i class="fas fa-search fa-lg"></i></a>
+        </li>
+        <li>
+          <a class="nav__link" href="#"
+            ><i class="fas fa-ellipsis-h fa-lg"></i
+          ></a>
+        </li>
+      </ul>
+    </nav>
   </body>
+  <script
+    src="https://kit.fontawesome.com/eda4ceb0bb.js"
+    crossorigin="anonymous"
+  ></script>
 </html>
