--- a/friends.html
+++ b/friends.html
@@ -27,14 +27,14 @@
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html"
-            ><i class="far fa-user fa-lg"></i
+            ><i class="far fa-user fa-2x"></i
           ></a>
         </li>
         <li>
-          <a class="nav__link" href="#"><i class="far fa-comment fa-lg"></i></a>
+          <a class="nav__link" href="#"><i class="far fa-comment fa-2x"></i></a>
         </li>
         <li>
-          <a class="nav__link" href="#"><i class="fas fa-search fa-lg"></i></a>
+          <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a>
         </li>
         <li>
           <a class="nav__link" href="#"
