--- a/friends.html
+++ b/friends.html
@@ -38,6 +38,11 @@
       <i class="fas fa-angle-right"></i>
     </a>
 
+    <div class="user-component">
+      <div class="user-component_column"></div>
+      <div class="user-component_column"></div>
+    </div>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
