--- a/friends.html
+++ b/friends.html
@@ -43,6 +43,16 @@
       <div class="user-component_column"></div>
     </div>
 
+    <div class="user_component">
+      <div class="user_component__column">
+        <img src="#" class="user_component__avatar" />
+        <div class="user_compoent__text">
+          
+        </div>
+      </div>
+      <div class="user_component__column"> </div>
+    </div>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
